[tool.poetry]
name = "connection"
version = "0.1.0"
description = ""
authors = ["Spacier <mrsimpleeegor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
serial = "^0.0.97"
loguru = "^0.7.2"
numpy = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
