[tool.poetry]
name = "connection"
version = "0.1.0"
description = ""
authors = ["Spacier <mrsimpleeegor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
numpy = "^2.0.0"
pyserial = "^3.5"
pyqtgraph = "^0.13.7"
pyqt6 = "^6.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
